# smartMPKmini

./: .gitignore  AGENTS.md  LICENSE  README.md  device_MPKmini2_SmartFocus.py  knowledgebase.md  pyproject.toml  smart_MPK_mini_driver.py
docs/superpowers/plans/: 2026-06-03-mpk-handler-architecture.md
tests/: conftest.py  test_script_integration.py
utils/tests/: conftest.py  test_script_integration.py
